# PyPowerEdgeFan

./: .gitignore  Dockerfile  README.md  poweredge_fan.py  poweredge_fan.service  pyproject.toml  requirements.txt
.github/workflows/: build.yml  docker-publish.yml  publish.yml
poweredge/: poweredge.py
poweredge_fan/: poweredge_fan.py
poweredge_fan/hardware/: __init__.py  poweredge.py  sensors.py
