[build-system]
requires = ["flit_core >=3.2,<4"]

[tool.flit.metadata]
module = "poweredge_fan"
author = "Jackie Yang"
author-email = "jackie@jackieyang.me"
home-page = "https://github.com/yourusername/PyPowerEdgeFan"  # replace with your GitHub repository URL
classifiers = ["License :: OSI Approved :: MIT License", "Programming Language :: Python :: 3"]
requires = ["PySensors"]

[tool.flit.scripts]
poweredge_fan = "poweredge_fan:main"

[tool.flit.entrypoints.console-scripts]
poweredge_fan = "poweredge_fan:main"